--- a/src/styles/scss/App.scss
+++ b/src/styles/scss/App.scss
@@ -9,12 +9,11 @@
 header {
   font-size: 1.2rem;
   padding: 2% 2% 0;
-  
 }
 
 @media only screen and (max-width: 600px) {
   header {
-    font-size: .8rem;
+    font-size: 0.8rem;
     padding: 5%;
   }
 }
