--- a/src/styles/scss/_popup.scss
+++ b/src/styles/scss/_popup.scss
@@ -5,7 +5,7 @@
     width: 100%;
     color: $secondary-color;
     background-color: $font-color;
-    text-shadow: 0 1px .5px $secondary-color; 
+    text-shadow: 0 1px 0.5px $secondary-color;
     align-content: center;
     padding: 1%;
     border: 1px solid $border-color;
